SelfServicePortal-Infrastructure-as-Code/kubernetes/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssp-dep
spec:
  template:
    spec:
      containers:
        - name: ssp-cont
          image: myacr.azurecr.io/cloud/selfserviceportal:123
