SelfServicePortal-Infrastructure-as-Code/kubernetes/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssp-ing
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/server-snippet: |
      location = / {
        return 301 /ssp-pls/;
      }
spec:
  tls:
    - hosts:
        - selfserviceportal.dev.cloud.org.gc.ca
  rules:
  - host: selfserviceportal.dev.cloud.org.gc.ca
    http:
      paths:
      - path: /ssp-pls/
        pathType: Prefix
        backend:
          service:
            name: ssp-svc
            port:
              number: 80
  ingressClassName: nginx
